02242/analysis_tool/src/output/TheLangParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g 2013-11-04 16:59:51

  package output;
  import java.util.ArrayList;
  import syntaxtree.condition.*;
  import syntaxtree.declaration.*;
  import syntaxtree.expression.*;
  import syntaxtree.statement.*;
  import syntaxtree.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class TheLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "OR", "ASSIGN", "SEMI", "GT", "GE", "LT", "LE", "EQ", "NEQ", "PLUS", "MINUS", "MUL", "DIV", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COLON", "IF", "THEN", "ELSE", "FI", "WHILE", "DO", "OD", "SKIP", "WRITE", "READ", "PROGRAM", "END", "TRUE", "FALSE", "INT", "LOW", "HIGH", "IDENTIFIER", "INTEGER", "COMMENT", "LETTER", "WS"
    };
    public static final int EOF=-1;
    public static final int AND=4;
    public static final int OR=5;
    public static final int ASSIGN=6;
    public static final int SEMI=7;
    public static final int GT=8;
    public static final int GE=9;
    public static final int LT=10;
    public static final int LE=11;
    public static final int EQ=12;
    public static final int NEQ=13;
    public static final int PLUS=14;
    public static final int MINUS=15;
    public static final int MUL=16;
    public static final int DIV=17;
    public static final int NOT=18;
    public static final int LPAREN=19;
    public static final int RPAREN=20;
    public static final int LBRACE=21;
    public static final int RBRACE=22;
    public static final int LBRACKET=23;
    public static final int RBRACKET=24;
    public static final int COLON=25;
    public static final int IF=26;
    public static final int THEN=27;
    public static final int ELSE=28;
    public static final int FI=29;
    public static final int WHILE=30;
    public static final int DO=31;
    public static final int OD=32;
    public static final int SKIP=33;
    public static final int WRITE=34;
    public static final int READ=35;
    public static final int PROGRAM=36;
    public static final int END=37;
    public static final int TRUE=38;
    public static final int FALSE=39;
    public static final int INT=40;
    public static final int LOW=41;
    public static final int HIGH=42;
    public static final int IDENTIFIER=43;
    public static final int INTEGER=44;
    public static final int COMMENT=45;
    public static final int LETTER=46;
    public static final int WS=47;

    // delegates
    // delegators


        public TheLangParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TheLangParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[54+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TheLangParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g"; }


    public static class aexpr_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aexpr"
    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:74:1: aexpr returns [Expression value] : arg1= aexpr1 ( PLUS arg1= aexpr1 | MINUS arg1= aexpr1 )* ;
    public final TheLangParser.aexpr_return aexpr() throws RecognitionException {
        TheLangParser.aexpr_return retval = new TheLangParser.aexpr_return();
        retval.start = input.LT(1);
        int aexpr_StartIndex = input.index();
        CommonTree root_0 = null;

        Token PLUS1=null;
        Token MINUS2=null;
        TheLangParser.aexpr1_return arg1 = null;


        CommonTree PLUS1_tree=null;
        CommonTree MINUS2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:75:5: (arg1= aexpr1 ( PLUS arg1= aexpr1 | MINUS arg1= aexpr1 )* )
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:75:7: arg1= aexpr1 ( PLUS arg1= aexpr1 | MINUS arg1= aexpr1 )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_aexpr1_in_aexpr440);
            arg1=aexpr1();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, arg1.getTree());
            if ( state.backtracking==0 ) {
              retval.value = arg1.value;
            }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:76:7: ( PLUS arg1= aexpr1 | MINUS arg1= aexpr1 )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==PLUS) ) {
                    alt1=1;
                }
                else if ( (LA1_0==MINUS) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:76:9: PLUS arg1= aexpr1
            	    {
            	    PLUS1=(Token)match(input,PLUS,FOLLOW_PLUS_in_aexpr453); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    PLUS1_tree = (CommonTree)adaptor.create(PLUS1);
            	    adaptor.addChild(root_0, PLUS1_tree);
            	    }
            	    pushFollow(FOLLOW_aexpr1_in_aexpr459);
            	    arg1=aexpr1();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, arg1.getTree());
            	    if ( state.backtracking==0 ) {
            	      retval.value = new OperationExpression(retval.value, arg1.value, ArithmeticOperation.PLUS); 
            	    }

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:77:9: MINUS arg1= aexpr1
            	    {
            	    MINUS2=(Token)match(input,MINUS,FOLLOW_MINUS_in_aexpr471); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    MINUS2_tree = (CommonTree)adaptor.create(MINUS2);
            	    adaptor.addChild(root_0, MINUS2_tree);
            	    }
            	    pushFollow(FOLLOW_aexpr1_in_aexpr477);
            	    arg1=aexpr1();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, arg1.getTree());
            	    if ( state.backtracking==0 ) {
            	      retval.value = new OperationExpression(retval.value, arg1.value, ArithmeticOperation.MINUS);
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, aexpr_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "aexpr"

    public static class aexpr1_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aexpr1"
    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:81:1: aexpr1 returns [Expression value] : arg1= aexpr2 ( MUL arg1= aexpr2 | DIV arg1= aexpr2 )* ;
    public final TheLangParser.aexpr1_return aexpr1() throws RecognitionException {
        TheLangParser.aexpr1_return retval = new TheLangParser.aexpr1_return();
        retval.start = input.LT(1);
        int aexpr1_StartIndex = input.index();
        CommonTree root_0 = null;

        Token MUL3=null;
        Token DIV4=null;
        TheLangParser.aexpr2_return arg1 = null;


        CommonTree MUL3_tree=null;
        CommonTree DIV4_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:82:5: (arg1= aexpr2 ( MUL arg1= aexpr2 | DIV arg1= aexpr2 )* )
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:82:7: arg1= aexpr2 ( MUL arg1= aexpr2 | DIV arg1= aexpr2 )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_aexpr2_in_aexpr1507);
            arg1=aexpr2();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, arg1.getTree());
            if ( state.backtracking==0 ) {
              retval.value = arg1.value;
            }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:83:7: ( MUL arg1= aexpr2 | DIV arg1= aexpr2 )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==MUL) ) {
                    alt2=1;
                }
                else if ( (LA2_0==DIV) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:83:9: MUL arg1= aexpr2
            	    {
            	    MUL3=(Token)match(input,MUL,FOLLOW_MUL_in_aexpr1520); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    MUL3_tree = (CommonTree)adaptor.create(MUL3);
            	    adaptor.addChild(root_0, MUL3_tree);
            	    }
            	    pushFollow(FOLLOW_aexpr2_in_aexpr1526);
            	    arg1=aexpr2();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, arg1.getTree());
            	    if ( state.backtracking==0 ) {
            	      retval.value = new OperationExpression(retval.value, arg1.value, ArithmeticOperation.MULTIPLICATION); 
            	    }

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:84:9: DIV arg1= aexpr2
            	    {
            	    DIV4=(Token)match(input,DIV,FOLLOW_DIV_in_aexpr1539); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    DIV4_tree = (CommonTree)adaptor.create(DIV4);
            	    adaptor.addChild(root_0, DIV4_tree);
            	    }
            	    pushFollow(FOLLOW_aexpr2_in_aexpr1545);
            	    arg1=aexpr2();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, arg1.getTree());
            	    if ( state.backtracking==0 ) {
            	      retval.value = new OperationExpression(retval.value, arg1.value, ArithmeticOperation.DIVISION);
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, aexpr1_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "aexpr1"

    public static class aexpr2_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aexpr2"
    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:88:1: aexpr2 returns [Expression value] : ( MINUS expr= aexpr3 | expr= aexpr3 );
    public final TheLangParser.aexpr2_return aexpr2() throws RecognitionException {
        TheLangParser.aexpr2_return retval = new TheLangParser.aexpr2_return();
        retval.start = input.LT(1);
        int aexpr2_StartIndex = input.index();
        CommonTree root_0 = null;

        Token MINUS5=null;
        TheLangParser.aexpr3_return expr = null;


        CommonTree MINUS5_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:89:5: ( MINUS expr= aexpr3 | expr= aexpr3 )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==MINUS) ) {
                alt3=1;
            }
            else if ( (LA3_0==LPAREN||(LA3_0>=IDENTIFIER && LA3_0<=INTEGER)) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:89:7: MINUS expr= aexpr3
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    MINUS5=(Token)match(input,MINUS,FOLLOW_MINUS_in_aexpr2571); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MINUS5_tree = (CommonTree)adaptor.create(MINUS5);
                    adaptor.addChild(root_0, MINUS5_tree);
                    }
                    pushFollow(FOLLOW_aexpr3_in_aexpr2577);
                    expr=aexpr3();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr.getTree());
                    if ( state.backtracking==0 ) {
                      retval.value = new NegationExpression(expr.value);
                    }

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:90:7: expr= aexpr3
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_aexpr3_in_aexpr2591);
                    expr=aexpr3();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr.getTree());
                    if ( state.backtracking==0 ) {
                      retval.value = expr.value;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, aexpr2_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "aexpr2"

    public static class aexpr3_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aexpr3"
    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:94:1: aexpr3 returns [Expression value] : (id= IDENTIFIER | id= IDENTIFIER LBRACKET idx= aexpr RBRACKET | cons= INTEGER | LPAREN expr= aexpr RPAREN );
    public final TheLangParser.aexpr3_return aexpr3() throws RecognitionException {
        TheLangParser.aexpr3_return retval = new TheLangParser.aexpr3_return();
        retval.start = input.LT(1);
        int aexpr3_StartIndex = input.index();
        CommonTree root_0 = null;

        Token id=null;
        Token cons=null;
        Token LBRACKET6=null;
        Token RBRACKET7=null;
        Token LPAREN8=null;
        Token RPAREN9=null;
        TheLangParser.aexpr_return idx = null;

        TheLangParser.aexpr_return expr = null;


        CommonTree id_tree=null;
        CommonTree cons_tree=null;
        CommonTree LBRACKET6_tree=null;
        CommonTree RBRACKET7_tree=null;
        CommonTree LPAREN8_tree=null;
        CommonTree RPAREN9_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:95:5: (id= IDENTIFIER | id= IDENTIFIER LBRACKET idx= aexpr RBRACKET | cons= INTEGER | LPAREN expr= aexpr RPAREN )
            int alt4=4;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==LBRACKET) ) {
                    alt4=2;
                }
                else if ( (LA4_1==EOF||(LA4_1>=AND && LA4_1<=OR)||(LA4_1>=SEMI && LA4_1<=DIV)||LA4_1==RPAREN||LA4_1==RBRACKET||LA4_1==THEN||LA4_1==DO) ) {
                    alt4=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
                }
                break;
            case INTEGER:
                {
                alt4=3;
                }
                break;
            case LPAREN:
                {
                alt4=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:95:7: id= IDENTIFIER
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    id=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_aexpr3620); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    id_tree = (CommonTree)adaptor.create(id);
                    adaptor.addChild(root_0, id_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.value = new Variable(Type.INT, id.getText());
                    }

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:96:7: id= IDENTIFIER LBRACKET idx= aexpr RBRACKET
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    id=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_aexpr3634); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    id_tree = (CommonTree)adaptor.create(id);
                    adaptor.addChild(root_0, id_tree);
                    }
                    LBRACKET6=(Token)match(input,LBRACKET,FOLLOW_LBRACKET_in_aexpr3636); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LBRACKET6_tree = (CommonTree)adaptor.create(LBRACKET6);
                    adaptor.addChild(root_0, LBRACKET6_tree);
                    }
                    pushFollow(FOLLOW_aexpr_in_aexpr3642);
                    idx=aexpr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, idx.getTree());
                    RBRACKET7=(Token)match(input,RBRACKET,FOLLOW_RBRACKET_in_aexpr3644); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    RBRACKET7_tree = (CommonTree)adaptor.create(RBRACKET7);
                    adaptor.addChild(root_0, RBRACKET7_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.value = new ArrayExpression(new Variable(Type.ARRAY, id.getText()), idx.value);
                    }

                    }
                    break;
                case 3 :
                    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:97:7: cons= INTEGER
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    cons=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_aexpr3659); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    cons_tree = (CommonTree)adaptor.create(cons);
                    adaptor.addChild(root_0, cons_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.value = new Constant(Integer.parseInt(cons.getText()));
                    }

                    }
                    break;
                case 4 :
                    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:98:7: LPAREN expr= aexpr RPAREN
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    LPAREN8=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_aexpr3669); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LPAREN8_tree = (CommonTree)adaptor.create(LPAREN8);
                    adaptor.addChild(root_0, LPAREN8_tree);
                    }
                    pushFollow(FOLLOW_aexpr_in_aexpr3675);
                    expr=aexpr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr.getTree());
                    RPAREN9=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_aexpr3677); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    RPAREN9_tree = (CommonTree)adaptor.create(RPAREN9);
                    adaptor.addChild(root_0, RPAREN9_tree);
                    }
                    if ( state.backtracking==0 ) {
                      retval.value = new ParanthesesExpression(expr.value);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, aexpr3_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "aexpr3"

    public static class bexpr_return extends ParserRuleReturnScope {
        public Condition value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bexpr"
    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:102:1: bexpr returns [Condition value] : expr= bexpr1 ( OR expr= bexpr1 )* ;
    public final TheLangParser.bexpr_return bexpr() throws RecognitionException {
        TheLangParser.bexpr_return retval = new TheLangParser.bexpr_return();
        retval.start = input.LT(1);
        int bexpr_StartIndex = input.index();
        CommonTree root_0 = null;

        Token OR10=null;
        TheLangParser.bexpr1_return expr = null;


        CommonTree OR10_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:103:5: (expr= bexpr1 ( OR expr= bexpr1 )* )
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:103:7: expr= bexpr1 ( OR expr= bexpr1 )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_bexpr1_in_bexpr705);
            expr=bexpr1();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, expr.getTree());
            if ( state.backtracking==0 ) {
              retval.value = expr.value;
            }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:104:7: ( OR expr= bexpr1 )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==OR) ) {
                    int LA5_2 = input.LA(2);

                    if ( (synpred9_TheLang()) ) {
                        alt5=1;
                    }


                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:104:8: OR expr= bexpr1
            	    {
            	    OR10=(Token)match(input,OR,FOLLOW_OR_in_bexpr717); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    OR10_tree = (CommonTree)adaptor.create(OR10);
            	    adaptor.addChild(root_0, OR10_tree);
            	    }
            	    pushFollow(FOLLOW_bexpr1_in_bexpr723);
            	    expr=bexpr1();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, expr.getTree());
            	    if ( state.backtracking==0 ) {
            	      retval.value = new OperationCondition(retval.value, expr.value, BooleanOperation.OR);
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, bexpr_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "bexpr"

    public static class bexpr1_return extends ParserRuleReturnScope {
        public Condition value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bexpr1"
    // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:108:1: bexpr1 returns [Condition value] : expr= bexpr2 ( AND expr= bexpr2 )* ;
    public final TheLangParser.bexpr1_return bexpr1() throws RecognitionException {
        TheLangParser.bexpr1_return retval = new TheLangParser.bexpr1_return();
        retval.start = input.LT(1);
        int bexpr1_StartIndex = input.index();
        CommonTree root_0 = null;

        Token AND11=null;
        TheLangParser.bexpr2_return expr = null;


        CommonTree AND11_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:109:5: (expr= bexpr2 ( AND expr= bexpr2 )* )
            // C:\\Users\\Ibrahim\\workspace\\parser\\src\\TheLang.g:109:7: expr= bexpr2 ( AND expr= bexpr2 )*
            {
            root_0 = (CommonTree)adaptor.nil();
